@@ -1,6 +1,6 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.2-3.2
+Version: 0.2-3.3
 Date: 2007-07-21
 Author: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Maintainer: Ingo Feinerer <h0125130@wu-wien.ac.at>
