@@ -1,5 +1,8 @@
 2007-07-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
+	* R/termdocmatrix.R: Added convenience methods ("[", nrow, ncol)
+	for accessing term-document matrices.
+
 	* inst/doc/tm.Rnw: readPDF is only called if pdftotext and pdfinfo
 	are installed.
 
